--- a/html/post.html
+++ b/html/post.html
@@ -4,17 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--   <link rel="stylesheet" href="http://localhost:8000/dist/css/home.css" /> -->
+    <link rel="stylesheet" href="https://use.typekit.net/eoy0gzf.css">
     <link rel="stylesheet" href="../css/color.css">
     <title>Platzi-Video</title>
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav class="logos">
+
+        </nav>
     </header>
 
     <main>
-        <section>
+        <section class="home">
+          <div class="home-sidebar">
+              <div class="logo">
+                  <figure class="logo-image">
+                      <img src="../images/platzi-video.png" alt="platzi-video">
+                  </figure>
+              </div>
+              <div class="sidebarPlaylist">
+                  <h2 class="sidebarPlaylist">Mi Playlist <button class="btn warning">Escuchar</button> </h2>
+                  <ol class="myPlaylist">
+                    <li class="myPlaylist-item">
+                      <a href="#">
+                          <span>
+                              Reasons To A Notebook Over A Computer Desktop
+                          </span>
+                      </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                Reasons To A Notebook Over A Computer Desktop
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                Reasons To A Notebook Over A Computer Desktop
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                Reasons To A Notebook Over A Computer Desktop
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                Reasons To A Notebook Over A Computer Desktop
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                Reasons To A Notebook Over A Computer Desktop
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                Reasons To A Notebook Over A Computer Desktop
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>
+                                Reasons To A Notebook Over A Computer Desktop
+                            </span>
+                        </a>
+                    </li>
+                  </ol>
+              </div>
+              <div class="sidebarPlayList">
 
+              </div>
+          </div>
         </section>
     </main>
 
