--- a/html/post.html
+++ b/html/post.html
@@ -27,56 +27,56 @@
                   <h2 class="sidebarPlaylist">Mi Playlist <button class="btn warning">Escuchar</button> </h2>
                   <ol class="myPlaylist">
                     <li class="myPlaylist-item">
-                      <a href="#">
+                      <a href="">
                           <span>
                               Reasons To A Notebook Over A Computer Desktop
                           </span>
                       </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <span>
                                 Reasons To A Notebook Over A Computer Desktop
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <span>
                                 Reasons To A Notebook Over A Computer Desktop
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <span>
                                 Reasons To A Notebook Over A Computer Desktop
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <span>
                                 Reasons To A Notebook Over A Computer Desktop
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <span>
                                 Reasons To A Notebook Over A Computer Desktop
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <span>
                                 Reasons To A Notebook Over A Computer Desktop
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="">
                             <span>
                                 Reasons To A Notebook Over A Computer Desktop
                             </span>
@@ -85,10 +85,80 @@
                   </ol>
               </div>
               <div class="sidebarPlayList">
-
+                <h2 class="sidebarPlaylist-title">Playlis de Amigos</h2>
+                <ul class="playlistfriends">
+                    <li class="playlistfriends-item">
+                      <a href="">
+                          <img src="../images/av1.jpg" alt="playlist">
+                          <span>
+                              Marvel
+                          </span>
+                      </a>
+                    </li>
+                    <li class="playlistfriends-item">
+                        <a href="">
+                            <img src="../images/av1.jpg" alt="playlist"> 
+                            <span>
+                                Marvel
+                            </span>
+                        </a>
+                      </li>
+                      <li class="playlistfriends-item">
+                        <a href="">
+                             <img src="../images/av1.jpg" alt="playlist"> 
+                            <span>
+                                Marvel
+                            </span>
+                        </a>
+                      </li>
+                      <li class="playlistfriends-item">
+                        <a href="">
+                             <img src="../images/av1.jpg" alt="playlist"> 
+                            <span>
+                                Marvel
+                            </span>
+                        </a>
+                      </li>
+                      <li class="playlistfriends-item">
+                        <a href="">
+                             <img src="../images/av1.jpg" alt="playlist"> 
+                            <span>
+                                Marvel
+                            </span>
+                        </a>
+                      </li>
+                      <li class="playlistfriends-item">
+                        <a href="">
+                            <img src="../images/av1.jpg" alt="playlist"> 
+                            <span>
+                                Marvel
+                            </span>
+                        </a>
+                      </li>
+                      <li class="playlistfriends-item">
+                        <a href="">
+                             <img src="../images/av1.jpg" alt="playlist"> 
+                            <span>
+                                Marvel
+                            </span>
+                        </a>
+                      </li>
+                      <li class="playlistfriends-item">
+                        <a href="">
+                            <img src="../images/av1.jpg" alt="playlist">
+                            <span>
+                                Marvel
+                            </span>
+                        </a>
+                      </li>
+                </ul>
               </div>
           </div>
         </section>
+
+        <div class="home-primary">
+
+        </div>
     </main>
 
     <footer>
