--- a/html/post.html
+++ b/html/post.html
@@ -157,8 +157,368 @@
         </section>
 
         <div class="home-primary">
-
+          <div class="primary-search">
+              <form action="" class="search">
+                  <input type="text" placeholder="Buscar Artista favorito">
+              </form>
+          </div>
+          <div class="primary-users">
+              <div class="user">
+                  <p>
+                      <img src="../images/av2.jpg" alt="Image-disc">
+                      <span>Marvel Avengers</span>
+                  </p>
+              </div>
+          </div>
+          <div class="primary-list">
+              <p>
+                  Filtrar por:
+                  <span>
+                      <label for="nombre" class="radio-label">Nombre</label>
+                      <input type="radio" id="nombre" name="filtro">
+                  </span>
+              </p>
+              <div class="primaryPlaylist">
+                  <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
+                  <h2 class="primaryPlaylist-title">Destacados</h2>
+                  <label for="destacados" class="checkbox-label">Ocultar</label>
+                  <input type="checkbox" id="destacados" class="checkbox">
+                  <div class="primaryPlaylist-list">
+                      <div class="primaryPlaylistItem">
+                          <div class="primaryPlaylistItem-image">
+                             <!--  <img src="../images/av2.jpg" alt="list"> -->
+                          </div>
+                          <h4 class="primaryplaylistItem-title">
+                              Avengers End Game
+                          </h4>
+                      </div>
+                      <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                           <!--  <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                       <!--      <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                          <!--   <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                            <!-- <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                           <!--  <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                  </div>
+              </div>
+             <!--  <div class="primaryPlaylist"></div> -->
+              <div class="primaryPlaylist">
+                <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
+                <h2 class="primaryPlaylist-title">Destacados</h2>
+                <label for="destacados" class="checkbox-label">Ocultar</label>
+                <input type="checkbox" id="destacados" class="checkbox">
+                <div class="primaryPlaylist-list">
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                           <!--  <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                     <!--      <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                        <!--   <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                          <!-- <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                </div>
+            </div>
+            <div class="primaryPlaylist">
+                <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
+                <h2 class="primaryPlaylist-title">Destacados</h2>
+                <label for="destacados" class="checkbox-label">Ocultar</label>
+                <input type="checkbox" id="destacados" class="checkbox">
+                <div class="primaryPlaylist-list">
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                           <!--  <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                     <!--      <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                        <!--   <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                          <!-- <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                </div>
+            </div>
+            <div class="primaryPlaylist">
+                <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
+                <h2 class="primaryPlaylist-title">Destacados</h2>
+                <label for="destacados" class="checkbox-label">Ocultar</label>
+                <input type="checkbox" id="destacados" class="checkbox">
+                <div class="primaryPlaylist-list">
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                           <!--  <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                     <!--      <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                        <!--   <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                          <!-- <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                </div>
+            </div>
+            <div class="primaryPlaylist">
+                <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
+                <h2 class="primaryPlaylist-title">Destacados</h2>
+                <label for="destacados" class="checkbox-label">Ocultar</label>
+                <input type="checkbox" id="destacados" class="checkbox">
+                <div class="primaryPlaylist-list">
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                           <!--  <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                     <!--      <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                        <!--   <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                          <!-- <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                </div>
+            </div>
+            <div class="primaryPlaylist">
+                <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
+                <h2 class="primaryPlaylist-title">Destacados</h2>
+                <label for="destacados" class="checkbox-label">Ocultar</label>
+                <input type="checkbox" id="destacados" class="checkbox">
+                <div class="primaryPlaylist-list">
+                    <div class="primaryPlaylistItem">
+                        <div class="primaryPlaylistItem-image">
+                           <!--  <img src="../images/av2.jpg" alt="list"> -->
+                        </div>
+                        <h4 class="primaryplaylistItem-title">
+                            Avengers End Game
+                        </h4>
+                    </div>
+                    <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                     <!--      <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                        <!--   <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                          <!-- <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                  <div class="primaryPlaylistItem">
+                      <div class="primaryPlaylistItem-image">
+                         <!--  <img src="../images/av2.jpg" alt="list"> -->
+                      </div>
+                      <h4 class="primaryplaylistItem-title">
+                          Avengers End Game
+                      </h4>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <!-- section -->
         </div>
+        <div class="home-featuring"></div>
     </main>
 
     <footer>
